metodo para checar a tarefa

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -681,10 +681,6 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
-}
-
 .box-border{
   box-sizing: border-box;
 }
@@ -784,8 +780,20 @@ video {
   display: none;
 }
 
+.h-4{
+  height: 1rem;
+}
+
 .h-screen{
   height: 100vh;
+}
+
+.max-h-48{
+  max-height: 12rem;
+}
+
+.w-4{
+  width: 1rem;
 }
 
 .w-4\/12{
@@ -1314,6 +1322,10 @@ video {
 
 .gap-2{
   gap: 0.5rem;
+}
+
+.gap-3{
+  gap: 0.75rem;
 }
 
 .gap-4{
@@ -2060,6 +2072,10 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
+.text-btn-color{
+  color: var(--btn-color);
+}
+
 .text-neutral-color{
   color: var(--neutral-color);
 }
@@ -2407,6 +2423,10 @@ video {
 
 body {
   font-family: 'Roboto Slab', serif;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
 
 @media (min-width: 640px){
