metodo para verificar tarefas existentes

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -800,8 +800,16 @@ video {
   width: 33.333333%;
 }
 
+.w-6\/12{
+  width: 50%;
+}
+
 .w-full{
   width: 100%;
+}
+
+.w-5\/12{
+  width: 41.666667%;
 }
 
 .flex-shrink{
@@ -1929,6 +1937,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -2469,37 +2482,6 @@ body {
   }
 }
 
-.after\:absolute::after{
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.after\:top-0::after{
-  content: var(--tw-content);
-  top: 0px;
-}
-
-.after\:h-3::after{
-  content: var(--tw-content);
-  height: 0.75rem;
-}
-
-.after\:h-\[1px\]::after{
-  content: var(--tw-content);
-  height: 1px;
-}
-
-.after\:w-full::after{
-  content: var(--tw-content);
-  width: 100%;
-}
-
-.after\:bg-black::after{
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-btn-hover:hover{
   background-color: var(--btn-hover);
 }
@@ -2532,6 +2514,40 @@ body {
 
 .hover\:focus\:text-center:focus:hover{
   text-align: center;
+}
+
+@media not all and (min-width: 1024px){
+  .max-lg\:flex{
+    display: flex;
+  }
+
+  .max-lg\:hidden{
+    display: none;
+  }
+
+  .max-lg\:w-11\/12{
+    width: 91.666667%;
+  }
+
+  .max-lg\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-lg\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .max-lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media not all and (min-width: 768px){
+  .max-md\:hidden{
+    display: none;
+  }
 }
 
 @media (min-width: 640px){
